Added functionality for grid creation, clearing, resizing, and drawing

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             <div id="grid-wrapper">
 
             </div>
+            <div class = "control-panel">
+                <button id = "clear">Clear Sketch</button>
+                <button id = "resize">Resize Grid</button>
+            </div>
         </div>
     </div>
     <script src ="script.js"></script>
